# plugIN-upterm

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.jetson  Dockerfile.x86_64  Makefile  README.md  build_info.h.in  install_plugIN.sh  plugin_credential.json  plugin_key_jetson  plugin_key_jetson.json  plugin_key_x86.txt  plugin_key_x86_64.json  release.sh  test
MainSrc/: Log.h  WebSocketClient.cpp  WebSocketClient.h  plugin_main.cpp
Plugins/: PluginSample.cpp  PluginSample.h  UptermPlugin.cpp  UptermPlugin.h
installed_dir/: install_plugIN.sh  plugin_update_template.json  uninstall_plugIN.sh
installed_dir/config/: plugin_update_template.json  uptermPluginUpdate.json
installed_dir/scripts/: startPlugin.sh  stopPlugin.sh
installed_dir/scripts/commands/: install.sh  uninstall.sh
installed_dir/scripts/states/: ssh.sh  state_key.sh  status.sh  version.sh
jetson/config/: appGUID  plugin_config_upterm.json  uptermPluginUpdate.json
jetson/install/: install_plugIN.sh  uninstall_plugIN.sh
output_package_jetson/: install_plugIN.sh  plugIN-upterm.service
output_package_jetson/9cdfc058-e3f8-4bf4-8621-d2114eade9d9/: uninstall_plugIN.sh
output_package_jetson/9cdfc058-e3f8-4bf4-8621-d2114eade9d9/config/: uptermPluginUpdate.json
output_package_jetson/9cdfc058-e3f8-4bf4-8621-d2114eade9d9/scripts/: startPlugin.sh  stopPlugin.sh
output_package_jetson/9cdfc058-e3f8-4bf4-8621-d2114eade9d9/scripts/commands/: stop.sh
output_package_jetson/9cdfc058-e3f8-4bf4-8621-d2114eade9d9/scripts/states/: ssh.sh  version.sh
output_package_x86/: install_plugIN.sh  plugIN-upterm.service
output_package_x86/e5c7f65b-1cf7-46e6-af56-d418ac43acc2/: uninstall_plugIN.sh
output_package_x86/e5c7f65b-1cf7-46e6-af56-d418ac43acc2/config/: appGUID  plugin_config_upterm.json  uptermPluginUpdate.json
output_package_x86/e5c7f65b-1cf7-46e6-af56-d418ac43acc2/scripts/states/: ssh.sh  status.sh
resource_dir_linux/: install_plugIN.sh  plugin_command_ack.json  plugin_state.json  plugin_update_template.json
resource_dir_linux/scripts/commands/: install.sh  start.sh
resource_dir_linux/scripts/states/: ssh.sh  version.sh
scripts/: stopPlugin.sh
scripts/commands/: install.sh  start.sh  stop.sh  uninstall.sh
scripts/states/: ssh.sh  version.sh
src/: Log.h  PluginSample.cpp  UptermPlugin.cpp  WebSocketClient.cpp  WebSocketClient.h  main.cpp  plugin_main.cpp
src/Util/: Utl_Log.cpp  Utl_file.cpp  Utl_mutex.cpp  Utl_thread.cpp  Utl_time.cpp  vpl__error.cpp
x86/config/: appGUID  plugin_config_upterm.json  uptermPluginUpdate.json
x86/install/: install_plugIN.sh  uninstall_plugIN.sh
